Added canada map and heatmap and backend tests